--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
             background-size: auto;
             background-attachment: fixed;
         }
+
         nav {
-            background-image: url("roses.jpg");
+            background-image: url("rosesnav.jpg");
             background-size: auto;
             background-attachment: fixed;
         }
+
         h2 {
             background-image: url("roses.jpg");
             background-size: auto;
             background-attachment: fixed;
         }
+
         h3 {
             background-image: url("roses.jpg");
             background-size: auto;
             background-attachment: fixed;
         }
+
         h4 {
             background-image: url("roses.jpg");
             background-size: auto;
@@ -38,20 +42,17 @@
 
 
 <body>
+    <nav>
+        <ul class="begin">
+            <li class="begin"> <a class="begin" href="#wie ben ik">Wie ben ik</a> </li>
+            <li class="begin"> <a class="begin" href="#mijn hobbys">Mijn hobby's </a> </li>
+            <li class="begin"> <a class="begin" href="#Wat ga ik leren">Wat ga ik leren </a> </li>
+            <li class="begin"> <a class="begin" href="#mijn hondje beach">Mijn hondje Beach </a></li>
+            <li class="begin"> <a class="begin" href="#Social Media">Mijn Social Media Accounts </a></li>
+        </ul>
+    </nav>
     <header>
         <h1> Welkom op mijn eerste website :) ! </h1>
-        <nav>
-            <p>
-            <p>
-            <ul class="begin">
-                <li class="begin"> <a href="#wie ben ik">Wie ben ik</a> </li>
-                <li class="begin"> <a href="#mijn hobbys">Mijn hobby's </a> </li>
-                <li class="begin"> <a href="#Wat ga ik leren">Wat ga ik leren </a> </li>
-                <li class="begin"> <a href="#mijn hondje beach">Mijn hondje Beach </a></li>
-                <li class="begin"> <a href="#Social Media">Mijn Social Media Accounts </a></li>
-            </ul>
-            </p>
-        </nav>
     </header>
     <br>
     <br>
@@ -132,17 +133,22 @@
                 bezig met deze website dus dat is een goed teken. Ook kan het feit dat ik afgelopen jaar een tussenjaar
                 had ook wel meespelen met de discipline. Ik doe in ieder geval wel me best!
             <p> Wel kan ik de dingen die ik leer gelijk al in de praktijk toepassen. Ik heb al microbit oplossingen
-                gemaakt voor bij me werk en het wordt mijn taak om de <a href="https://www.rondvaartdelft.nl/">Rondvaart
+                gemaakt voor bij me werk en het wordt mijn taak om de <a class=rondvaart
+                    href="https://www.rondvaartdelft.nl/">Rondvaart
                     website</a> bij te houden en te updaten.
             <p>
         </section>
         <br>
         <br>
         <section class="beach">
-            <img class="hond"
+            <img class="hond img-pc"
                 src="https://scontent-ams4-1.xx.fbcdn.net/v/t1.6435-9/57530943_2307268502888504_2455885767554105344_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=U4mog2jm8L8AX9WOvGh&_nc_ht=scontent-ams4-1.xx&oh=00_AT8RIUKyig9b5_V99aM4HcMeA7BgWiiSt1CrtH1UB7-gBw&oe=634AF5A0"
                 alt="Foto van bruine Labrador Beach">
-            <h4 class="beach" id="mijn hondje beach"> Mijn hondje Beach</h4>
+            <h4 class="beach" id="mijn hondje beach"> Mijn hondje Beach
+            </h4>
+            <img class="hond img-mobile"
+                src="https://scontent-ams4-1.xx.fbcdn.net/v/t1.6435-9/57530943_2307268502888504_2455885767554105344_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=U4mog2jm8L8AX9WOvGh&_nc_ht=scontent-ams4-1.xx&oh=00_AT8RIUKyig9b5_V99aM4HcMeA7BgWiiSt1CrtH1UB7-gBw&oe=634AF5A0"
+                alt="Foto van bruine Labrador Beach">
             <p class="beach"> Wij hebben een hele leuke labrador genaamd Beach. Ja, de naam is verzonnen op het
                 strand. Beach is 3 december 2018 geboren en op 9 februari 2019 heeft hij zijn eerste nacht bij ons
                 doorgebracht. Hij is heel lief en ook heel druk. Een echte ADHD hond. Helaas heeft hij wel vaak jeuk
@@ -155,56 +161,56 @@
         <br>
         <br>
         <section class="media">
-            <table class="socialMedia">
-                <thead>
-                    <tr>
-                        <th>Platform </th>
-                        <th class="rij">Gebruik </th>
-                        <th>Veel/Weinig in gebruik </th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Instagram </td>
-                        <td class="rij">Memes en grappige filmpjes kijken. </td>
-                        <td>De hele dag door </td>
-                    </tr>
-                    <tr>
-                        <td>WhatsApp </td>
-                        <td class="rij">Werk- en school gerelateerd. Ook (video)bellen.</td>
-                        <td>Regelmatig tot veel</td>
-                    </tr>
-                    <tr>
-                        <td>Snapchat </td>
-                        <td class="rij">Meer voor de fun gesprekken en om foto's te posten.</td>
-                        <td>Regelmatig</td>
-                    </tr>
-                    <tr>
-                        <td>Facebook</td>
-                        <td class="rij">Om mensen te zoeken en als account voor mobile games.</td>
-                        <td>Bijna nooit</td>
-                    </tr>
-                    <tr>
-                        <td>Discord</td>
-                        <td class="rij">Met vrienden gamen die geen Playstation of headset hebben.</td>
-                        <td>Af en toe</td>
-                    </tr>
-                    <tr>
-                        <td>Teams</td>
-                        <td class="rij">Alleen voor Hogeschool Rotterdam</td>
-                        <td>Regelmatig</td>
-                    </tr>
-                    <tr>
-                        <td>Playstation</td>
-                        <td class="rij">Voor gamen, Gamen met vrienden en films kijken</td>
-                        <td>Het meest gebruikt van allemaal</td>
-                    </tr>
-                </tbody>
-            </table>
-            <h4 class="media" id="Social Media">Mijn Social Media accounts</h4>
+            <h4 class="mediatel" id="Social Media">Mijn Social Media accounts</h4>
+                <table class="socialMedia">
+                    <thead>
+                        <tr>
+                            <th>Platform </th>
+                            <th class="rij">Gebruik </th>
+                            <th>Veel/Weinig in gebruik </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Instagram </td>
+                            <td class="rij">Memes en grappige filmpjes kijken. </td>
+                            <td>De hele dag door </td>
+                        </tr>
+                        <tr>
+                            <td>WhatsApp </td>
+                            <td class="rij">Werk- en school gerelateerd. Ook (video)bellen.</td>
+                            <td>Regelmatig tot veel</td>
+                        </tr>
+                        <tr>
+                            <td>Snapchat </td>
+                            <td class="rij">Meer voor de fun gesprekken en om foto's te posten.</td>
+                            <td>Regelmatig</td>
+                        </tr>
+                        <tr>
+                            <td>Facebook</td>
+                            <td class="rij">Om mensen te zoeken en als account voor mobile games.</td>
+                            <td>Bijna nooit</td>
+                        </tr>
+                        <tr>
+                            <td>Discord</td>
+                            <td class="rij">Met vrienden gamen die geen Playstation of headset hebben.</td>
+                            <td>Af en toe</td>
+                        </tr>
+                        <tr>
+                            <td>Teams</td>
+                            <td class="rij">Alleen voor Hogeschool Rotterdam</td>
+                            <td>Regelmatig</td>
+                        </tr>
+                        <tr>
+                            <td>Playstation</td>
+                            <td class="rij">Voor gamen, Gamen met vrienden en films kijken</td>
+                            <td>Het meest gebruikt van allemaal</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h4 class="medialap" id="Social Media">Mijn Social Media accounts</h4>
             <p class="media"> Ik ben actief op een aantal social media platformen. Elk platform gebruik ik weer voor
-                andere doeleinden, bij deze dus een schema.
-                <br>
+                andere doeleinden.
                 <br>
         </section>
         <br>
