--- a/about.html
+++ b/about.html
@@ -158,17 +158,25 @@
         </section>
 
         <section class="beach">
+
+            <section class="beach-layout">
+                <h2 class="beach" id="mijn hondje beach"> Mijn hondje Beach</h4>
+                    <img class="hond mobile" src="img/beach.jpg" alt="Foto van bruine Labrador Beach">
+                    <p class="beach"> Wij hebben een hele leuke labrador genaamd Beach. Ja, de naam is verzonnen op het
+                        strand. Beach is 3 december 2018 geboren en op 9 februari 2019 heeft hij zijn eerste nacht bij
+                        ons
+                        doorgebracht. Hij is heel lief en ook heel druk. Een echte ADHD hond. Helaas heeft hij wel vaak
+                        jeuk
+                        dus we moeten hem iedere maand een injectie geven en hem iedere week wassen met speciale
+                        shampoo.
+                        Dit vind ik wel heel vervelend want Beach is echt een hele lieve hond en iedereen is gek op hem.
+                    <p class="beach"> Beach is mijn eerste huisdier en ik ben totaal geen dierenvriend maar Beach heeft
+                        toch
+                        een speciaal plekje in mijn hart. Mensen krijgen ook echt ruzie met mij als ze slecht praten
+                        over
+                        mijn hond, dat verdient hij niet.
+            </section>
             <img class="hond pc" src="img/beach.jpg" alt="Foto van bruine Labrador Beach">
-            <h2 class="beach" id="mijn hondje beach"> Mijn hondje Beach</h4>
-                <img class="hond mobile" src="img/beach.jpg" alt="Foto van bruine Labrador Beach">
-                <p class="beach"> Wij hebben een hele leuke labrador genaamd Beach. Ja, de naam is verzonnen op het
-                    strand. Beach is 3 december 2018 geboren en op 9 februari 2019 heeft hij zijn eerste nacht bij ons
-                    doorgebracht. Hij is heel lief en ook heel druk. Een echte ADHD hond. Helaas heeft hij wel vaak jeuk
-                    dus we moeten hem iedere maand een injectie geven en hem iedere week wassen met speciale shampoo.
-                    Dit vind ik wel heel vervelend want Beach is echt een hele lieve hond en iedereen is gek op hem.
-                <p class="beach"> Beach is mijn eerste huisdier en ik ben totaal geen dierenvriend maar Beach heeft toch
-                    een speciaal plekje in mijn hart. Mensen krijgen ook echt ruzie met mij als ze slecht praten over
-                    mijn hond, dat verdient hij niet.
         </section>
         <section class="media">
             <section class="medialayout">
