updated portfolio met skills

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/eb84ecf582.js" crossorigin="anonymous"></script>
     <title>My Portfolio</title>
 </head>
@@ -20,22 +20,22 @@
         </section>
         <section class="navbar" id="navbar">
             <div class="one nav">
-                <a class="begin" href="./index.html">Home</a>
+                <a class="begin" href="index.html">Home</a>
             </div>
             <div class="two nav">
                 <a class="begin" href="./about.html">About</a>
             </div>
             <div class="three nav">
-                <a class="begin" href="./skills.html">Skills</a>
+                <a class="begin" href="skills.html">Skills</a>
             </div>
             <div class="four nav">
-                <a class="begin" href="./contact.html">Contact</a>
+                <a class="begin" href="contact.html">Contact</a>
             </div>
         </section>
     </nav>
     <script>
         function mobileNav() {
-            var x = document.getElementById("navbar");
+            const x = document.getElementById("navbar");
             if (x.style.display === "block") {
                 x.style.display = "none";
             } else {
@@ -55,7 +55,7 @@
         </form>
         <section class="chatbuttons">
             <button class="sendchat">Send</button>
-            <button class="closechat" onclick="closeChat()">Close Chat</i></button>
+            <button class="closechat" onclick="closeChat()">Close Chat</button>
         </section>
     </chat>
     <script>
@@ -76,12 +76,12 @@
                 en <a href="#Social Media">mijn social media accounts</a></p>
             <p> Negentien jaar geleden ben ik geboren en getogen in Delft.
             <p> Mijn woonplaats is nog steeds Delft.
-            <p> Mijn schoolcarriere begon op de Egelantier voor klas 1 en 2. Vanaf groep 3 zat ik op de Delftsche
-                SchoolVereeniging, daar had ik ook mijn VWO advies gekregen. Mijn middelbare school was het Christelijk
+            <p> Mijn schoolcarrière begon op de Egelantier voor klas 1 en 2. Vanaf groep 3 zat ik op de Delftsche
+                SchoolVereeniging, daar had ik ook mijn Vwo-advies gekregen. Mijn middelbare school was het Christelijk
                 Lyceum Delft. Vond ik een leuke school omdat deze 1 minuut lopen van mijn huis vandaan was. Na 4 VWO was
-                ik naar 4 HAVO gegaan en uiteindelijk heb ik cum laude HAVO diploma gehaald (niet officieel cum laude.
-                Ik had een 7 voor Duits. Dat was me 1e voldoende voor Duits dat jaar.. dus ik vind het wel cum laude).
-                Daarna heb ik een tussenjaar genomen. In deze tijd heb ik gewerkt als Sushi maker, beheerde ik de
+                ik naar 4 HAVO gegaan en uiteindelijk heb ik cum laude HAVO-diploma gehaald (niet officieel cum laude.
+                Ik had een 7 voor Duits. Dat was me 1e voldoende voor Duits dat jaar. Dus ik vind het wel cum laude).
+                Daarna heb ik een tussenjaar genomen. In deze tijd heb ik gewerkt als Sushi-maker, beheerde ik de
                 kledingwinkel van een concept store, mijn rijbewijs en vaarbewijs gehaald en ben ik officieel in dienst
                 gegaan bij me vader.
             <p> Ik heb dus ook al jaren gewerkt bij mijn vaders rondvaart bedrijf in Delft. Toen ik nog jong was, hielp
@@ -89,6 +89,8 @@
                 Spoiler alert: op mijn 18e was het gelukt om een auto te kopen en nu bestuur ik de boten terwijl ik
                 tegen onze gasten aan het praten ben over de mooie geschiedenis van Delft. (is echt een heel leuk
                 baantje!!)
+            <p>Tijdens het eerste jaar van de studie CMGT heb ik als taak gekregen dat ik de website van Rondvaart Delft
+        ga beheren, daarnaast ben ik nu ook bezig met een reserveringssysteem en een intekensysteem voor het bedrijf.</p>
             <p> Daarnaast zijn mijn lievelingskleuren:
             <ol>
                 <li>Zwart</li>
@@ -134,19 +136,15 @@
         </section>
 
         <section class="leren">
-            <h2 class="leren" id="Wat ga ik leren"> Wat ga ik leren</h3>
+            <h2 class="leren" id="Wat ga ik leren"> Wat ga ik leren</h2>
                 <p> Ik ben echt een noob- ik bedoel beginner wat betreft programmeren en robots. Dus ik moet letterlijk
                     alles gaan leren want ik doe dit allemaal voor de eerste keer. Ondanks mijn ervaring of het gebrek
-                    daar
-                    aan, vind ik de dingen die ik leer bij deze studie wel heel interessant en leuk. Als deze website af
-                    is
-                    ga ik ook vol trots hem laten zien aan al mijn vrienden en familie. Het zelfde geldt voor de robots
-                    die
-                    ik al heb gemaakt.
+                    daar aan, vind ik de dingen die ik leer bij deze studie wel heel interessant en leuk. Als deze website af
+                    is, ga ik ook vol trots hem laten zien aan al mijn vrienden en familie. Hetzelfde geldt voor de robots
+                    die ik al heb gemaakt.
                 <p> Ook moet ik toegeven dat ik altijd al problemen heb gehad wat betreft discipline en motivatie. Daar
-                    valt
-                    zeker ook een hoop in te leren maar tot nu toe is de motievatie er wel! De discipline gaat langzaam
-                    beter. Op de middelbare school maakte ik b.v. nooit mijn huiswerk en nu ben ik in me vrije tijd toch
+                    valt zeker ook een hoop in te leren, maar tot nu toe is de motivate er wel! De discipline gaat langzaam
+                    beter. Op de middelbare school maakte ik bv nooit mijn huiswerk en nu ben ik in me vrije tijd toch
                     bezig met deze website dus dat is een goed teken. Ook kan het feit dat ik afgelopen jaar een
                     tussenjaar
                     had ook wel meespelen met de discipline. Ik doe in ieder geval wel me best!
@@ -160,8 +158,8 @@
         <section class="beach">
 
             <section class="beach-layout">
-                <h2 class="beach" id="mijn hondje beach"> Mijn hondje Beach</h4>
-                    <img class="hond mobile" src="img/beach.jpg" alt="Foto van bruine Labrador Beach">
+                <h2 class="beach" id="mijn hondje beach"> Mijn hondje Beach</h2>
+                    <img class="hond mobile" src="./img/beach.jpg" alt="Foto van bruine Labrador Beach">
                     <p class="beach"> Wij hebben een hele leuke labrador genaamd Beach. Ja, de naam is verzonnen op het
                         strand. Beach is 3 december 2018 geboren en op 9 februari 2019 heeft hij zijn eerste nacht bij
                         ons
@@ -176,13 +174,13 @@
                         over
                         mijn hond, dat verdient hij niet.
             </section>
-            <img class="hond pc" src="img/beach.jpg" alt="Foto van bruine Labrador Beach">
+            <img class="hond pc" src="./img/beach.jpg" alt="Foto van bruine Labrador Beach">
         </section>
         <section class="media">
             <section class="medialayout">
                 <div class="medialayout">
-                    <h2 class="media" id="Social Media">Mijn Social Media accounts</h4>
-                        <p class="media"> Ik ben actief op een aantal social media platformen. Elk platform gebruik ik
+                    <h2 class="media" id="Social Media">Mijn Social Media accounts</h2>
+                        <p class="media"> Ik ben actief op een aantal sociale media platformen. Elk platform gebruik ik
                             weer
                             voor
                             andere doeleinden.
