--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/eb84ecf582.js" crossorigin="anonymous"></script>
     <title>My Portfolio</title>
 </head>
@@ -20,31 +20,32 @@
         </div>
         <div class="slideshow" id="myPictures">
             <div class="slideimage"> <img class="slideshow"
-                 src="img/bootje.jpg" alt="Ik in de boot">
+                                          src="./img/bootje.jpg" alt="Ik in de boot">
                 <div class="hideimage">
                     <div class="hidetext">Bootje varen</div>
                 </div>
             </div>
-            <div class="slideimage"> <img class="slideshow upside" 
-                src="img/bluedress.png" alt="Ik in een blauwe jurk">
+            <div class="slideimage"> <img class="slideshow upside"
+                                          src="./img/bluedress.png" alt="Ik in een blauwe jurk">
                 <div class="hideimage  upside">
                     <div class="hidetext">Kerst</div>
                 </div>
             </div>
-            <div class="slideimage"><img class="slideshow" 
-                src="img/duiken.jpg" alt="Ik tijdens het duiken">
+            <div class="slideimage"><img class="slideshow"
+                                         src="./img/duiken.jpg" alt="Ik tijdens het duiken">
                 <div class="hideimage">
                     <div class="hidetext">Duiken</div>
                 </div>
             </div>
-            <div class="slideimage"><img class="slideshow  upside" 
-                src="img/quad.jpg" alt="ik die op een quad zit">
+            <div class="slideimage">
+                <img class="slideshow  upside"
+                     src="./img/quad.jpg" alt="ik die op een quad zit">
                 <div class="hideimage  upside">
                     <div class="hidetext">Quad rijden</div>
                 </div>
             </div>
-            <div class="slideimage"><img class="slideshow" 
-                src="img/fotos.jpg" alt="Kijkend naar Afrikaanse dansers">
+            <div class="slideimage"><img class="slideshow"
+                                         src="./img/fotos.jpg" alt="Kijkend naar Afrikaanse dansers">
                 <div class="hideimage">
                     <div class="hidetext">Vakantie</div>
                 </div>
@@ -58,6 +59,7 @@
                     document.getElementById("myPictures").style.display = "none";
                 }
             </script>
+        </div>
     </section>
 
     <header class="home">
@@ -66,7 +68,7 @@
         <section class="intro">
             <p class="intro">Op deze website zult u een hoop informatie over mij vinden.</p>
             <p class="intro">Onder andere, wie ik ben, wat ik tijdens mijn opleiding Creative Media &
-                Game Technologies (cmgt) heb geleerd, de vaardigheden die ik heb ontwikkeld
+                Game Technologies (CMGT) heb geleerd, de vaardigheden die ik heb ontwikkeld
                 en de mogelijkheid om contact met mij op te nemen voor eventuele vragen.
             </p>
         </section>
@@ -75,8 +77,8 @@
     <section class="start">
         <div class="start one"><a class="start" href="./index.html">Home</a></div>
         <div class="start two"><a class="start" href="./about.html">About</a></div>
-        <div class="start three"><a class="start" href="./skills.html">Skills </a></div>
-        <div class="start four"><a class="start" href="./contact.html">Contact</a></div>
+        <div class="start three"><a class="start" href="skills.html">Skills </a></div>
+        <div class="start four"><a class="start" href="contact.html">Contact</a></div>
     </section>
 
     <button class="openchat" onclick="openChat()"><i class='fas fa-comments'></i></button>
